<resources>
    <string name="app_name">eHealth Wallet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="menu_header_medical_reports">Medical Reports</string>

    <string name="menu_blood_reports">Blood Reports</string>
    <string name="menu_dermatology">Dermatology</string>
    <string name="menu_dismissal_reports">Dismissal Reports</string>
    <string name="menu_general_medicine">General Medicine</string>
    <string name="menu_gynecology">Gynecology</string>
    <string name="menu_internal_medicine">Internal Medicine</string>
    <string name="menu_neurology">Neurology</string>
    <string name="menu_ophtalmologist">Ophtalmologist</string>
    <string name="menu_orthopedics">Orthopedics</string>
    <string name="menu_prevention">Prevention</string>
    <string name="menu_radiology">Radiology</string>
    <string name="menu_urology">Urology</string>

    <string name="table_headline_radiology">Radiology Reports</string>

    <string name="table_date">Date</string>
    <string name="table_operator">Operator</string>
    <string name="table_examination">Examination</string>

    <string name="table_date_ex1">2018-06-14</string>
    <string name="table_operator_ex1">DonG Clinix</string>
    <string name="table_examination_ex1">CR Knee left</string>

    <string name="table_date_ex2">2018-06-15</string>
    <string name="table_operator_ex2">DonG Clinix</string>
    <string name="table_examination_ex2">CR Hand right</string>

    <string name="table_date_ex3">2018-06-20</string>
    <string name="table_operator_ex3">Dr. Who</string>
    <string name="table_examination_ex3">MRI Hand right</string>

    <string name="table_date_ex4">2018-06-20</string>
    <string name="table_operator_ex4">DonG Clinix</string>
    <string name="table_examination_ex4">CT Knee left</string>

    <string name="some_text"><![CDATA[<p><b>ImagingStudy:</b><br> Hand right CR DICOM imaging study</p><p><b>Conclusion:</b><BR>At status post trauma, two fractures of the middle phalanx of dig V can be found...</p><p><b>Coded Diagnosis:</b><BR>Fractured phalanx of dig V as mentioned above</p>]]></string>

</resources>
